# kenken

./: .clang-format  CMakeLists.txt  LICENSE
.github/workflows/: test.yml
design/: components.md  features.md  puzzle_generation.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt  types.h
src/puzzle_generation/: CMakeLists.txt  matrix.cc  matrix.h  matrix_test.cc
